Footer ul align fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -455,6 +455,12 @@ input[type="number"] {
 .mTitle {
     padding: 50px 0;
 }
+.ft_details ul {
+    display: block;
+    width: 300px;
+    padding-left: 0;
+    margin: 40px auto;
+}
 }
 @media only screen and (max-width: 768px) {
 	.container {
